--- a/app/mod_auth/templates/user-management.html
+++ b/app/mod_auth/templates/user-management.html
@@ -97,6 +97,8 @@
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
 var JSON_FLAT = [];
+$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
+$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <script type="text/javascript" src="{{ url_for('auth.static', filename='js/user-aws-selection.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('auth.static', filename='js/user-aws-map.js') }}"></script>
