--- a/app/mod_aws/templates/display-AWS-Coordinates.html
+++ b/app/mod_aws/templates/display-AWS-Coordinates.html
@@ -128,6 +128,8 @@
 <script type="text/javascript">
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
+$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
+$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 {% if session.logged_in %}
 <script type="text/javascript" src="{{ url_for('aws.static', filename='js/export-AWS-Coordinates.js') }}"></script>
