--- a/app/mod_aws/templates/display-IRIDL-PrecipData.html
+++ b/app/mod_aws/templates/display-IRIDL-PrecipData.html
@@ -98,6 +98,8 @@
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
 var DATA_RFE = JSON.parse('{{ dataRFE | tojson }}');
+$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
+$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <script type="text/javascript" src="{{ url_for('static', filename='geojson/country-boundaries.geojson') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/print-screen-map.js') }}"></script>
