--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{{ url_for('homepage') }}">
-                    <img src="{{ url_for('static', filename='images/meteo_logo.png') }}">
+                    <img class="meteo-logo" src="{{ url_for('static', filename='images/meteo_logo.png') }}">
                 </a>
             </div>
             <ul class="nav navbar-nav">
