--- a/app/mod_auth/templates/user-management.html
+++ b/app/mod_auth/templates/user-management.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='lib/Plugins-leaflet/Leaflet.PointInPolygon/wise-leaflet-pip.js') }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ url_for('auth.static', filename='css/user-management.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet-site.css') }}" />
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
@@ -97,8 +98,6 @@
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
 var JSON_FLAT = [];
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <script type="text/javascript" src="{{ url_for('auth.static', filename='js/user-aws-selection.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('auth.static', filename='js/user-aws-map.js') }}"></script>
