--- a/app/mod_aws/templates/display-AWS-AccumulRain.html
+++ b/app/mod_aws/templates/display-AWS-AccumulRain.html
@@ -23,6 +23,7 @@
 <!--  -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('aws.static', filename='css/aws.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet-site.css') }}" />
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 <style>
     #accumulTime{
     height: 1.4em;
@@ -175,8 +176,6 @@
 <script type="text/javascript">
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <!--  -->
 {% if session.logged_in %}
