--- a/app/mod_aws/templates/display-AWS-Status.html
+++ b/app/mod_aws/templates/display-AWS-Status.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='lib/Plugins-leaflet/Leaflet.Spin-1.1.2/leaflet.spin.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='lib/Plugins-leaflet/Leaflet-easyPrint/bundle.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet-site.css') }}" />
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 <style>
     #mapAWSStatus {
     width: 100%;
@@ -115,8 +116,6 @@
 <script type="text/javascript">
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 {% if session.logged_in %}
 {% if session.data.useraction == 0 %}
