--- a/app/mod_aws/templates/display-IRIDL-PrecipData.html
+++ b/app/mod_aws/templates/display-IRIDL-PrecipData.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('aws.static', filename='css/gridded-map.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('aws.static', filename='css/aws.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet-site.css') }}" />
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
@@ -98,8 +99,6 @@
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
 var DATA_RFE = JSON.parse('{{ dataRFE | tojson }}');
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <script type="text/javascript" src="{{ url_for('static', filename='geojson/country-boundaries.geojson') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/print-screen-map.js') }}"></script>
