--- a/app/mod_aws/templates/display-Wind-Contours.html
+++ b/app/mod_aws/templates/display-Wind-Contours.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='lib/select2-4.1.0/dist/js/select2.full.min.js') }}"></script>
 <!--  -->
 <link rel="stylesheet" type="text/css" href="{{ url_for('aws.static', filename='css/aws.css') }}">
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 <style>
     #contFreqContour {
     width: 100%;
@@ -110,8 +111,6 @@
 <script type="text/javascript">
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
 <!--  -->
 {% if session.logged_in %}
