--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -51,7 +51,6 @@
 <script type="text/javascript">
 var DATA_USERS = JSON.parse('{{ dataUser | tojson }}');
 var MTO_INIT = JSON.parse('{{ metInfo | tojson }}');
-$('link[rel="shortcut icon"]').attr("href", "/static/images/" + MTO_INIT.iconImage);
-$('.meteo-logo').attr("src", "/static/images/" + MTO_INIT.metLogo);
 </script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/logo.js') }}"></script>
 {% endblock %}
